demo/versioned_docs/version-1.2.0/event-reference/01-complex-event.mdx
---
title: Complex Event with Validation Constraints
description: "A generic event demonstrating various validation constraints and recursive documentation capabilities."
sidebar_label: Complex Event with Validation Constraints
custom_edit_url: https://github.com/benedikt-buchert/tracking_docs/edit/main/demo/static/schemas/1.2.0/events/complex-event.json
---

import SchemaViewer from "@theme/SchemaViewer";
import SchemaJsonViewer from "@theme/SchemaJsonViewer";

# Complex Event with Validation Constraints

A generic event demonstrating various validation constraints and recursive documentation capabilities.

<SchemaViewer
  schema={{
    $schema: "https://json-schema.org/draft/2020-12/schema",
    $id: "https://tracking-docs-demo.buchert.digital/schemas/1.2.0/events/complex-event.json",
    title: "Complex Event with Validation Constraints",
    description:
      "A generic event demonstrating various validation constraints and recursive documentation capabilities.",
    type: "object",
    required: [
      "$schema",
      "event",
      "number_constraints",
      "string_constraints",
      "user_data",
    ],
    $defs: {
      strictObject: {
        type: "object",
        propertyNames: { maxLength: 40, pattern: "^(\\$schema)|[a-z0-9_]+$" },
        additionalProperties: {
          anyOf: [
            { $ref: "#/allOf/0/$defs/strictObject" },
            { type: "array", items: { $ref: "#/allOf/0/$defs/strictObject" } },
            { not: { type: "object" } },
          ],
        },
      },
    },
    $ref: "#/allOf/0/$defs/strictObject",
    properties: {
      event: {
        type: "string",
        description: "The name of the event.",
        const: "user_update",
        examples: ["user_update"],
      },
      ecommerce: {
        type: "object",
        description: "Ecommerce related data.",
        "x-gtm-clear": true,
      },
      user_data: {
        type: "object",
        description: "User related data.",
        "x-gtm-clear": true,
        required: ["user_id", "attributes"],
        properties: {
          user_id: {
            type: "string",
            description: "Unique User ID.",
            examples: ["U_999"],
          },
          is_active: {
            type: "boolean",
            description: "Status of the user.",
            examples: [true],
          },
          attributes: {
            type: "object",
            description: "Nested generic attributes.",
            properties: {
              segment: {
                type: "string",
                description: "Marketing segment.",
                examples: ["premium"],
              },
              score: {
                type: "number",
                description: "Engagement score.",
                examples: [95],
              },
            },
          },
          addresses: {
            type: "array",
            description: "List of user addresses.",
            items: {
              type: "object",
              required: ["city", "zip"],
              properties: {
                street: {
                  type: "string",
                  description: "The street address.",
                  examples: ["123 Main St"],
                },
                city: {
                  type: "string",
                  description: "The city name.",
                  examples: ["New York"],
                },
                zip: {
                  type: "string",
                  description: "The postal ZIP code.",
                  examples: ["10001"],
                },
              },
            },
          },
        },
      },
      $schema: {
        type: "string",
        description:
          "Defines the structure of the event. This can be used to validate an event against the schema provided.",
        const:
          "https://tracking-docs-demo.buchert.digital/schemas/1.2.0/events/complex-event.json",
      },
      timestamp: {
        type: "integer",
        description: "Unix timestamp of the event.",
        examples: [16788922],
      },
      string_constraints: {
        type: "string",
        description: "A string with various constraints.",
        minLength: 2,
        maxLength: 10,
        pattern: "^[a-z]+$",
        format: "hostname",
        examples: ["example"],
      },
      number_constraints: {
        type: "number",
        description: "A number with various constraints.",
        minimum: 10,
        maximum: 100,
        multipleOf: 5,
        examples: [50],
      },
      exclusive_number_constraints: {
        type: "number",
        description: "A number with exclusive constraints.",
        exclusiveMinimum: 10,
        exclusiveMaximum: 100,
        examples: [50],
      },
      array_constraints: {
        type: "array",
        description: "An array with various constraints.",
        minItems: 1,
        maxItems: 5,
        uniqueItems: true,
        examples: [["a", "b"]],
        items: { type: "string" },
      },
      contains_array_constraints: {
        type: "array",
        description: "An array with contains constraints.",
        contains: { type: "integer" },
        minContains: 1,
        maxContains: 2,
        examples: [[1, "text", 2]],
      },
      object_constraints: {
        type: "object",
        description: "An object with various constraints.",
        minProperties: 1,
        maxProperties: 3,
        propertyNames: { pattern: "^[a-z0-9_]+$" },
        examples: [{ prop_a: "some_value", prop_b: "another_value" }],
        additionalProperties: false,
        properties: {
          prop_a: {
            type: "string",
            description: "First arbitrary string property.",
            examples: ["some_value"],
          },
          prop_b: {
            type: "string",
            description: "Second arbitrary string property.",
            examples: ["another_value"],
          },
        },
      },
      dependent_required_constraint: {
        type: "object",
        description: "An object with dependent required properties.",
        dependentRequired: { credit_card: ["billing_address"] },
        examples: [
          {
            credit_card: 1234567890123456,
            billing_address: "123 Billing Address, Anytown, USA",
          },
        ],
        properties: {
          credit_card: {
            type: "number",
            description: "The credit card number.",
            examples: [1234567890123456],
          },
          billing_address: {
            type: "string",
            description: "The billing address associated with the credit card.",
            examples: ["123 Billing Address, Anytown, USA"],
          },
        },
      },
      enum_constraint: {
        type: "string",
        description: "A property with an enum constraint.",
        enum: ["admin", "editor", "viewer"],
        examples: ["admin"],
      },
      const_constraint: {
        type: "string",
        description: "A property that must have a constant value.",
        const: "must_be_this",
        examples: ["must_be_this"],
      },
    },
  }}
  sourceSchema={{
    $schema: "https://json-schema.org/draft/2020-12/schema",
    $id: "https://tracking-docs-demo.buchert.digital/schemas/1.2.0/events/complex-event.json",
    title: "Complex Event with Validation Constraints",
    description:
      "A generic event demonstrating various validation constraints and recursive documentation capabilities.",
    type: "object",
    required: [
      "$schema",
      "event",
      "number_constraints",
      "string_constraints",
      "user_data",
    ],
    properties: {
      $schema: {
        type: "string",
        description:
          "Defines the structure of the event. This can be used to validate an event against the schema provided.",
        const:
          "https://tracking-docs-demo.buchert.digital/schemas/1.2.0/events/complex-event.json",
      },
      event: {
        type: "string",
        const: "user_update",
        description: "The event name.",
        examples: ["user_update"],
      },
      timestamp: {
        type: "integer",
        description: "Unix timestamp of the event.",
        examples: [16788922],
      },
      user_data: {
        type: "object",
        description: "Container for user information.",
        required: ["user_id", "attributes"],
        properties: {
          user_id: {
            type: "string",
            description: "Unique User ID.",
            examples: ["U_999"],
          },
          is_active: {
            type: "boolean",
            description: "Status of the user.",
            examples: [true],
          },
          attributes: {
            type: "object",
            description: "Nested generic attributes.",
            properties: {
              segment: {
                type: "string",
                description: "Marketing segment.",
                examples: ["premium"],
              },
              score: {
                type: "number",
                description: "Engagement score.",
                examples: [95],
              },
            },
          },
          addresses: {
            type: "array",
            description: "List of user addresses.",
            items: {
              type: "object",
              required: ["city", "zip"],
              properties: {
                street: {
                  type: "string",
                  description: "The street address.",
                  examples: ["123 Main St"],
                },
                city: {
                  type: "string",
                  description: "The city name.",
                  examples: ["New York"],
                },
                zip: {
                  type: "string",
                  description: "The postal ZIP code.",
                  examples: ["10001"],
                },
              },
            },
          },
        },
      },
      string_constraints: {
        type: "string",
        description: "A string with various constraints.",
        minLength: 2,
        maxLength: 10,
        pattern: "^[a-z]+$",
        format: "hostname",
        examples: ["example"],
      },
      number_constraints: {
        type: "number",
        description: "A number with various constraints.",
        minimum: 10,
        maximum: 100,
        multipleOf: 5,
        examples: [50],
      },
      exclusive_number_constraints: {
        type: "number",
        description: "A number with exclusive constraints.",
        exclusiveMinimum: 10,
        exclusiveMaximum: 100,
        examples: [50],
      },
      array_constraints: {
        type: "array",
        description: "An array with various constraints.",
        minItems: 1,
        maxItems: 5,
        uniqueItems: true,
        items: { type: "string" },
        examples: [["a", "b"]],
      },
      contains_array_constraints: {
        type: "array",
        description: "An array with contains constraints.",
        contains: { type: "integer" },
        minContains: 1,
        maxContains: 2,
        examples: [[1, "text", 2]],
      },
      object_constraints: {
        type: "object",
        description: "An object with various constraints.",
        minProperties: 1,
        maxProperties: 3,
        additionalProperties: false,
        propertyNames: { pattern: "^[a-z0-9_]+$" },
        properties: {
          prop_a: {
            type: "string",
            description: "First arbitrary string property.",
            examples: ["some_value"],
          },
          prop_b: {
            type: "string",
            description: "Second arbitrary string property.",
            examples: ["another_value"],
          },
        },
        examples: [{ prop_a: "some_value", prop_b: "another_value" }],
      },
      dependent_required_constraint: {
        type: "object",
        description: "An object with dependent required properties.",
        dependentRequired: { credit_card: ["billing_address"] },
        properties: {
          credit_card: {
            type: "number",
            description: "The credit card number.",
            examples: [1234567890123456],
          },
          billing_address: {
            type: "string",
            description: "The billing address associated with the credit card.",
            examples: ["123 Billing Address, Anytown, USA"],
          },
        },
        examples: [
          {
            credit_card: 1234567890123456,
            billing_address: "123 Billing Address, Anytown, USA",
          },
        ],
      },
      enum_constraint: {
        type: "string",
        description: "A property with an enum constraint.",
        enum: ["admin", "editor", "viewer"],
        examples: ["admin"],
      },
      const_constraint: {
        type: "string",
        description: "A property that must have a constant value.",
        const: "must_be_this",
        examples: ["must_be_this"],
      },
    },
  }}
  sourcePath={"events/complex-event.json"}
  schemaSources={{
    "events/complex-event.json": {
      $schema: "https://json-schema.org/draft/2020-12/schema",
      $id: "https://tracking-docs-demo.buchert.digital/schemas/1.2.0/events/complex-event.json",
      title: "Complex Event with Validation Constraints",
      description:
        "A generic event demonstrating various validation constraints and recursive documentation capabilities.",
      type: "object",
      required: [
        "$schema",
        "event",
        "number_constraints",
        "string_constraints",
        "user_data",
      ],
      properties: {
        $schema: {
          type: "string",
          description:
            "Defines the structure of the event. This can be used to validate an event against the schema provided.",
          const:
            "https://tracking-docs-demo.buchert.digital/schemas/1.2.0/events/complex-event.json",
        },
        event: {
          type: "string",
          const: "user_update",
          description: "The event name.",
          examples: ["user_update"],
        },
        timestamp: {
          type: "integer",
          description: "Unix timestamp of the event.",
          examples: [16788922],
        },
        user_data: {
          type: "object",
          description: "Container for user information.",
          required: ["user_id", "attributes"],
          properties: {
            user_id: {
              type: "string",
              description: "Unique User ID.",
              examples: ["U_999"],
            },
            is_active: {
              type: "boolean",
              description: "Status of the user.",
              examples: [true],
            },
            attributes: {
              type: "object",
              description: "Nested generic attributes.",
              properties: {
                segment: {
                  type: "string",
                  description: "Marketing segment.",
                  examples: ["premium"],
                },
                score: {
                  type: "number",
                  description: "Engagement score.",
                  examples: [95],
                },
              },
            },
            addresses: {
              type: "array",
              description: "List of user addresses.",
              items: {
                type: "object",
                required: ["city", "zip"],
                properties: {
                  street: {
                    type: "string",
                    description: "The street address.",
                    examples: ["123 Main St"],
                  },
                  city: {
                    type: "string",
                    description: "The city name.",
                    examples: ["New York"],
                  },
                  zip: {
                    type: "string",
                    description: "The postal ZIP code.",
                    examples: ["10001"],
                  },
                },
              },
            },
          },
        },
        string_constraints: {
          type: "string",
          description: "A string with various constraints.",
          minLength: 2,
          maxLength: 10,
          pattern: "^[a-z]+$",
          format: "hostname",
          examples: ["example"],
        },
        number_constraints: {
          type: "number",
          description: "A number with various constraints.",
          minimum: 10,
          maximum: 100,
          multipleOf: 5,
          examples: [50],
        },
        exclusive_number_constraints: {
          type: "number",
          description: "A number with exclusive constraints.",
          exclusiveMinimum: 10,
          exclusiveMaximum: 100,
          examples: [50],
        },
        array_constraints: {
          type: "array",
          description: "An array with various constraints.",
          minItems: 1,
          maxItems: 5,
          uniqueItems: true,
          items: { type: "string" },
          examples: [["a", "b"]],
        },
        contains_array_constraints: {
          type: "array",
          description: "An array with contains constraints.",
          contains: { type: "integer" },
          minContains: 1,
          maxContains: 2,
          examples: [[1, "text", 2]],
        },
        object_constraints: {
          type: "object",
          description: "An object with various constraints.",
          minProperties: 1,
          maxProperties: 3,
          additionalProperties: false,
          propertyNames: { pattern: "^[a-z0-9_]+$" },
          properties: {
            prop_a: {
              type: "string",
              description: "First arbitrary string property.",
              examples: ["some_value"],
            },
            prop_b: {
              type: "string",
              description: "Second arbitrary string property.",
              examples: ["another_value"],
            },
          },
          examples: [{ prop_a: "some_value", prop_b: "another_value" }],
        },
        dependent_required_constraint: {
          type: "object",
          description: "An object with dependent required properties.",
          dependentRequired: { credit_card: ["billing_address"] },
          properties: {
            credit_card: {
              type: "number",
              description: "The credit card number.",
              examples: [1234567890123456],
            },
            billing_address: {
              type: "string",
              description:
                "The billing address associated with the credit card.",
              examples: ["123 Billing Address, Anytown, USA"],
            },
          },
          examples: [
            {
              credit_card: 1234567890123456,
              billing_address: "123 Billing Address, Anytown, USA",
            },
          ],
        },
        enum_constraint: {
          type: "string",
          description: "A property with an enum constraint.",
          enum: ["admin", "editor", "viewer"],
          examples: ["admin"],
        },
        const_constraint: {
          type: "string",
          description: "A property that must have a constant value.",
          const: "must_be_this",
          examples: ["must_be_this"],
        },
      },
    },
  }}
/>
<SchemaJsonViewer
  schema={{
    $schema: "https://json-schema.org/draft/2020-12/schema",
    $id: "https://tracking-docs-demo.buchert.digital/schemas/1.2.0/events/complex-event.json",
    title: "Complex Event with Validation Constraints",
    description:
      "A generic event demonstrating various validation constraints and recursive documentation capabilities.",
    type: "object",
    required: [
      "$schema",
      "event",
      "number_constraints",
      "string_constraints",
      "user_data",
    ],
    $defs: {
      strictObject: {
        type: "object",
        propertyNames: { maxLength: 40, pattern: "^(\\$schema)|[a-z0-9_]+$" },
        additionalProperties: {
          anyOf: [
            { $ref: "#/allOf/0/$defs/strictObject" },
            { type: "array", items: { $ref: "#/allOf/0/$defs/strictObject" } },
            { not: { type: "object" } },
          ],
        },
      },
    },
    $ref: "#/allOf/0/$defs/strictObject",
    properties: {
      event: {
        type: "string",
        description: "The name of the event.",
        const: "user_update",
        examples: ["user_update"],
      },
      ecommerce: {
        type: "object",
        description: "Ecommerce related data.",
        "x-gtm-clear": true,
      },
      user_data: {
        type: "object",
        description: "User related data.",
        "x-gtm-clear": true,
        required: ["user_id", "attributes"],
        properties: {
          user_id: {
            type: "string",
            description: "Unique User ID.",
            examples: ["U_999"],
          },
          is_active: {
            type: "boolean",
            description: "Status of the user.",
            examples: [true],
          },
          attributes: {
            type: "object",
            description: "Nested generic attributes.",
            properties: {
              segment: {
                type: "string",
                description: "Marketing segment.",
                examples: ["premium"],
              },
              score: {
                type: "number",
                description: "Engagement score.",
                examples: [95],
              },
            },
          },
          addresses: {
            type: "array",
            description: "List of user addresses.",
            items: {
              type: "object",
              required: ["city", "zip"],
              properties: {
                street: {
                  type: "string",
                  description: "The street address.",
                  examples: ["123 Main St"],
                },
                city: {
                  type: "string",
                  description: "The city name.",
                  examples: ["New York"],
                },
                zip: {
                  type: "string",
                  description: "The postal ZIP code.",
                  examples: ["10001"],
                },
              },
            },
          },
        },
      },
      $schema: {
        type: "string",
        description:
          "Defines the structure of the event. This can be used to validate an event against the schema provided.",
        const:
          "https://tracking-docs-demo.buchert.digital/schemas/1.2.0/events/complex-event.json",
      },
      timestamp: {
        type: "integer",
        description: "Unix timestamp of the event.",
        examples: [16788922],
      },
      string_constraints: {
        type: "string",
        description: "A string with various constraints.",
        minLength: 2,
        maxLength: 10,
        pattern: "^[a-z]+$",
        format: "hostname",
        examples: ["example"],
      },
      number_constraints: {
        type: "number",
        description: "A number with various constraints.",
        minimum: 10,
        maximum: 100,
        multipleOf: 5,
        examples: [50],
      },
      exclusive_number_constraints: {
        type: "number",
        description: "A number with exclusive constraints.",
        exclusiveMinimum: 10,
        exclusiveMaximum: 100,
        examples: [50],
      },
      array_constraints: {
        type: "array",
        description: "An array with various constraints.",
        minItems: 1,
        maxItems: 5,
        uniqueItems: true,
        examples: [["a", "b"]],
        items: { type: "string" },
      },
      contains_array_constraints: {
        type: "array",
        description: "An array with contains constraints.",
        contains: { type: "integer" },
        minContains: 1,
        maxContains: 2,
        examples: [[1, "text", 2]],
      },
      object_constraints: {
        type: "object",
        description: "An object with various constraints.",
        minProperties: 1,
        maxProperties: 3,
        propertyNames: { pattern: "^[a-z0-9_]+$" },
        examples: [{ prop_a: "some_value", prop_b: "another_value" }],
        additionalProperties: false,
        properties: {
          prop_a: {
            type: "string",
            description: "First arbitrary string property.",
            examples: ["some_value"],
          },
          prop_b: {
            type: "string",
            description: "Second arbitrary string property.",
            examples: ["another_value"],
          },
        },
      },
      dependent_required_constraint: {
        type: "object",
        description: "An object with dependent required properties.",
        dependentRequired: { credit_card: ["billing_address"] },
        examples: [
          {
            credit_card: 1234567890123456,
            billing_address: "123 Billing Address, Anytown, USA",
          },
        ],
        properties: {
          credit_card: {
            type: "number",
            description: "The credit card number.",
            examples: [1234567890123456],
          },
          billing_address: {
            type: "string",
            description: "The billing address associated with the credit card.",
            examples: ["123 Billing Address, Anytown, USA"],
          },
        },
      },
      enum_constraint: {
        type: "string",
        description: "A property with an enum constraint.",
        enum: ["admin", "editor", "viewer"],
        examples: ["admin"],
      },
      const_constraint: {
        type: "string",
        description: "A property that must have a constant value.",
        const: "must_be_this",
        examples: ["must_be_this"],
      },
    },
  }}
  sourcePath={"events/complex-event.json"}
  schemaSources={{
    "events/complex-event.json": {
      $schema: "https://json-schema.org/draft/2020-12/schema",
      $id: "https://tracking-docs-demo.buchert.digital/schemas/1.2.0/events/complex-event.json",
      title: "Complex Event with Validation Constraints",
      description:
        "A generic event demonstrating various validation constraints and recursive documentation capabilities.",
      type: "object",
      required: [
        "$schema",
        "event",
        "number_constraints",
        "string_constraints",
        "user_data",
      ],
      properties: {
        $schema: {
          type: "string",
          description:
            "Defines the structure of the event. This can be used to validate an event against the schema provided.",
          const:
            "https://tracking-docs-demo.buchert.digital/schemas/1.2.0/events/complex-event.json",
        },
        event: {
          type: "string",
          const: "user_update",
          description: "The event name.",
          examples: ["user_update"],
        },
        timestamp: {
          type: "integer",
          description: "Unix timestamp of the event.",
          examples: [16788922],
        },
        user_data: {
          type: "object",
          description: "Container for user information.",
          required: ["user_id", "attributes"],
          properties: {
            user_id: {
              type: "string",
              description: "Unique User ID.",
              examples: ["U_999"],
            },
            is_active: {
              type: "boolean",
              description: "Status of the user.",
              examples: [true],
            },
            attributes: {
              type: "object",
              description: "Nested generic attributes.",
              properties: {
                segment: {
                  type: "string",
                  description: "Marketing segment.",
                  examples: ["premium"],
                },
                score: {
                  type: "number",
                  description: "Engagement score.",
                  examples: [95],
                },
              },
            },
            addresses: {
              type: "array",
              description: "List of user addresses.",
              items: {
                type: "object",
                required: ["city", "zip"],
                properties: {
                  street: {
                    type: "string",
                    description: "The street address.",
                    examples: ["123 Main St"],
                  },
                  city: {
                    type: "string",
                    description: "The city name.",
                    examples: ["New York"],
                  },
                  zip: {
                    type: "string",
                    description: "The postal ZIP code.",
                    examples: ["10001"],
                  },
                },
              },
            },
          },
        },
        string_constraints: {
          type: "string",
          description: "A string with various constraints.",
          minLength: 2,
          maxLength: 10,
          pattern: "^[a-z]+$",
          format: "hostname",
          examples: ["example"],
        },
        number_constraints: {
          type: "number",
          description: "A number with various constraints.",
          minimum: 10,
          maximum: 100,
          multipleOf: 5,
          examples: [50],
        },
        exclusive_number_constraints: {
          type: "number",
          description: "A number with exclusive constraints.",
          exclusiveMinimum: 10,
          exclusiveMaximum: 100,
          examples: [50],
        },
        array_constraints: {
          type: "array",
          description: "An array with various constraints.",
          minItems: 1,
          maxItems: 5,
          uniqueItems: true,
          items: { type: "string" },
          examples: [["a", "b"]],
        },
        contains_array_constraints: {
          type: "array",
          description: "An array with contains constraints.",
          contains: { type: "integer" },
          minContains: 1,
          maxContains: 2,
          examples: [[1, "text", 2]],
        },
        object_constraints: {
          type: "object",
          description: "An object with various constraints.",
          minProperties: 1,
          maxProperties: 3,
          additionalProperties: false,
          propertyNames: { pattern: "^[a-z0-9_]+$" },
          properties: {
            prop_a: {
              type: "string",
              description: "First arbitrary string property.",
              examples: ["some_value"],
            },
            prop_b: {
              type: "string",
              description: "Second arbitrary string property.",
              examples: ["another_value"],
            },
          },
          examples: [{ prop_a: "some_value", prop_b: "another_value" }],
        },
        dependent_required_constraint: {
          type: "object",
          description: "An object with dependent required properties.",
          dependentRequired: { credit_card: ["billing_address"] },
          properties: {
            credit_card: {
              type: "number",
              description: "The credit card number.",
              examples: [1234567890123456],
            },
            billing_address: {
              type: "string",
              description:
                "The billing address associated with the credit card.",
              examples: ["123 Billing Address, Anytown, USA"],
            },
          },
          examples: [
            {
              credit_card: 1234567890123456,
              billing_address: "123 Billing Address, Anytown, USA",
            },
          ],
        },
        enum_constraint: {
          type: "string",
          description: "A property with an enum constraint.",
          enum: ["admin", "editor", "viewer"],
          examples: ["admin"],
        },
        const_constraint: {
          type: "string",
          description: "A property that must have a constant value.",
          const: "must_be_this",
          examples: ["must_be_this"],
        },
      },
    },
  }}
/>
